--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
 <head>
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <title>Color +</title>
-  <meta name="description" content="Color Plus is a simple game based on addition of colors.">
+  <title>COLOR+</title>
+  <meta name="description" content="COLOR+ is a simple game based on addition of colors.">
   <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 
