Added color logic changes for color mix and time duration

--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
   <title>COLOR+</title>
   <meta name="description" content="COLOR+ is a simple game based on addition of colors.">
   <meta name="viewport" content="width=device-width, initial-scale=1">
+
+  <link type="text/css" rel="stylesheet" href="styles/font.css">
 </head>
 
 <body>
