--- a/public/index.html
+++ b/public/index.html
@@ -9,6 +9,10 @@
   <meta name="viewport" content="width=device-width, target-densitydpi=160dpi, initial-scale=1.0, maximum-scale=1, user-scalable=no, minimal-ui">
 
   <link type="text/css" rel="stylesheet" href="styles/font.css">
+
+  <link href="favicon.ico" rel="apple-touch-icon" />
+  <link href="favicon.ico" rel="icon" />
+  
 </head>
 
 <body>
