--- a/public/index.html
+++ b/public/index.html
@@ -8,11 +8,11 @@
   <meta name="description" content="COLOR+ is a simple game based on addition of colors.">
   <meta name="viewport" content="width=device-width, target-densitydpi=160dpi, initial-scale=1.0, maximum-scale=1, user-scalable=no, minimal-ui">
 
+  <link rel="shortcut icon" type="image/png" href="favicon.png"/>
+  <link href="favicon.png" rel="apple-touch-icon" />
   <link type="text/css" rel="stylesheet" href="styles/font.css">
 
-  <link href="favicon.ico" rel="apple-touch-icon" />
-  <link href="favicon.ico" rel="icon" />
-  
+
 </head>
 
 <body>
