--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <title>COLOR+</title>
-  <meta name="description" content="COLOR+ is a simple game based on addition of colors.">
+  <meta name="description" content="COLOR+ is a simple game based on addition of two colors.">
   <meta name="viewport" content="width=device-width, target-densitydpi=160dpi, initial-scale=1.0, maximum-scale=1, user-scalable=no, minimal-ui">
 
   <link rel="shortcut icon" type="image/png" href="favicon.png"/>
